@@ -1,7 +1,5 @@
 TODO
 
-v0.2
-- check curb heights
 v0.3
 - check friction settings (slippery, rainy?)
 - asphalt texture
