@@ -1,5 +1,6 @@
 
 v0.2
+	- check curb heights
 	- add bankings
 	- add pits
 
